provider/scss/custom/_style.scss
// This File is imported last, and will override other styles in the cascade
// Add styles here to make changes without digging in too much

.post-info .excerpt { cursor: default; }

.archives {
  h2 {
    font-family: $font-serif;
    margin-bottom: 10px; } }

.notfound {
  text-align: center;
}

.entry-content code {
  background-color: #EEE;
  padding: 1px 5px;
}

.MathJax_Display {
  cursor: default;
}

#tag {
  margin-bottom: 15px;
}

#strip {
  height: 5px;
  margin: 0 -20px;
  background-color: #2A9AF9;
}

h1.notfound { font-size: 4em; }
p.notfound { margin: 15px 0; }

#footer {
  font-size: 1.3em;
  color: #999;
  margin-top: 2px;

  #social {
    font-family: $font-mono;
    font-size: 18px;
    color: #999;
    
    a {
      color: $color-gray02;
      transition: color 0.3s;
      &:hover {
        color: $color-gray01;
      }
    }
  }
}

.center {
  margin-left: auto;
  margin-right: auto;
}

.left {
  float: left;
  margin-right: 1.5em;
  & > * { margin-top: 10px !important; }
}

.right {
  float: right;
  margin-left: 1.5em;
  & > * { margin-top: 10px !important; }
}

img.center {
  display: block;
  clear: both;
}

article .entry-content table {
  cursor: default;
  font-size: 0.875em;
  margin: 25px auto;
  background: #F2F9FF;
  border: 2px solid #8ccaff;

  th {
    background: #8ccaff;
    color: #00427b;
  }

  td { color: #00427B; }
  th, td { padding: 2px 10px; }
  tr:nth-of-type(2n) { background: #D0E9FF; }
}

abbr {
  cursor: help;
  border-bottom: 1px dotted #ddd;

  &:hover { border-bottom: 1px solid #ccc; }
}

sup {
  font-family: $font-mono;
  vertical-align: baseline;
  font-size: inherit;

  a[id^="fnref"] {
    color: #990000;
    &:before { content: "[#"; }
    &:after { content: "]"; }
  }
}

sup { line-height: 1; }

.inner {
	width: 720px;
	margin: 0 auto;
  padding-top: 15px;
	@media screen and (max-width: 766px){
		width: 100%;
	}
}

dt {
  font-weight: bold;
}

article .entry-content ul,
article .entry-content ol {
  li { line-height: 1.625; }
  li p {
    margin-top: 0;
    margin-bottom: 10px;
  }
}

.entry-content ul li {
  list-style-type: none;

  &:before {
    content: '\00BB';
    cursor: default;
    position: absolute;
    margin-left: -15px;
    color: #ccc; // #ddd
  }
}

#toc.right-toc {
  float: right;
  margin-left: 10px;
  margin-bottom: 10px;
  margin-top: 0;
  padding: 0;

  @media screen and (max-width: 600px) {
    float: none;
    padding: 0;
    margin-left: 0;
    margin-top: 10px;
  }
}

#toc {
  font-family: $font-serif;
  margin-top: 10px;

  p {
    font-weight: bold;
    margin-top: 0;
  }

  & > ol {
    margin-left: 0;
    margin-top: 5px;
    font-size: 14px;
  
    @media screen and (max-width: 600px) {
      font-size: 13px;
    }
  }

  ol {
    counter-reset: item;
  }

  li {
    margin-top: 0;
    display: block;

    @media screen and (max-width: 600px) {
      line-height: 22px;
    }

    &:before {
      content: counters(item, ".") ". ";
      counter-increment: item;
    }
  }

  &:after {
    clear: both;
  }
}

.footnotes {
  font-family: $font-serif;
  font-size: 12px;
  padding: 0 25px;

  @media screen and (max-width: 600px) {
    padding: 0;
  }

  a[href^="#fnref"] {
    font: 1em $font-icon;
    margin-left: 5px;
  }

  p { line-height: 22px; }

  li { margin-bottom: 5px; }
  li p:last-child { margin-bottom: 0; }

  hr {
    padding: 0;
    text-align: center;
    width: 100%;
    background-color: #eee;
    margin: 30px auto 20px;

    &:after {
      content: "§";
      cursor: default;
      display: inline-block;
      position: relative;
      font-size: 2em;
      padding: 0 0.25em;
      background: white;
      top: -0.75em;
    }
  }
}


hr {
  background-color: #cccccc;
  border: 0;
  height: 2px;
  color: #cccccc;
  margin: 35px auto;
  width: 50%;
  clear: both;
}

#main-nav > ul > li > a {
  padding: 31px 0 35px 0;
  text-transform: uppercase;
  font-size: 14px;

  &::after { padding-left: 0; }

	@media screen and (max-width: 766px){
    padding: 16px 0;
  }
}

#comment {
  padding-top: 15px;
  margin-top: 5px;
  border-top: 5px solid #8ccaff;
  clear: both;
}

#content {
  article {
    padding: 0 0 15px 0;
  }
}

.highlighter {
  background-color: #ffc;
}

.post {
  .meta {
    clear: both;
    position: static;
    width: auto;
    font-family: $font-serif;

    // TODO: move this to post.scss
    .date, .tags, .commit, .notes {
      display: inline-block;
      margin-right: 30px;
    }

    .entry-content a:hover {
      color: #258FB8;
      text-decoration: underline;
    }
  }
}

.entry-content li > figure.code {
  margin: 15px 0;
}

.entry-content figure.code {
  margin: 15px -28px;

  @media screen and (max-width: 600px) {
    margin-left: 0;
    margin-right: 0;
  }

  // 28 gap on either side (= 56) + 720
  @media screen and (max-width: 776px) {
    margin-left: 0;
    margin-right: 0;
  }
}

figure.code {
  padding: 0;
  border: none;
  border-radius: 0;
  margin: 15px 0;
  cursor: default;

  figcaption {
    @media screen and (max-width: 600px) {
      display: none;
    }

    background-color: #8ccaff;
    border-top: 2px solid #8CCAFF;
    padding: 5px 28px; // 5px 10px;
    position: relative;
    font-size: 87.5%;
    color: #00427b;

    abbr {
      border-bottom: 1px dotted #00427B;

      &:hover { border-bottom: 1px solid #00427B; }
    }
    span {
      background: none;
      padding: 0;
      margin: 0;
      font-weight: bold;
      display: block;

      &:empty{
        display: none;
      }

      a, a:visited {
        position: absolute;
        top: 5px;
        right: 28px; // 15px;
        color: #00427B;
        font-weight: bold;
      }
    }
  }

  .code-container {
    overflow-x: auto;
    background: #F2F9FF;
  }

  .highlighttable {
    line-height: 18px;
    margin: 0;
    border: 0;

    @media screen and (max-width: 600px) {
      display: inline-block;
    }

    .linenodiv {
      @media screen and (max-width: 600px) {
        display: none;
      }

      width: 17px;
      background-color: #ECECEC;
      color: #AAA;
      border-right: 2px solid #DDD;
      padding: 5px;
      text-align: right;

      a { color: #AAA; }
    }

    .linenos {
      line-height: 18px;
    }

    .code {
      padding-left: 6px;

      @media screen and (max-width: 600px) {
        padding-left: 2px;
        line-height: 18px;
      }
    }

    .code, .gutter { line-height: 18px; }

    td { padding: 0; }
  }
}

.entry-content code,
.entry-content pre {
  font-family: $font-mono;
}

.entry-content > pre {
  background-color: #f2f9ff;
  color: #00427b;
  padding-left: 10px;
  margin-top: 10px;
  margin-left: -10px;
  margin-right: -10px;
}

.page h1.title {
  margin-bottom: 15px;
  margin-top: 5px;
  font-family: $font-serif;
  font-weight: 400;
}
.entry-content {
  h2 { border-bottom: none !important; }
  h1, h2, h3, h4, h5, {
    margin-top: 0;
    overflow: hidden;
    position: static !important;
    font-weight: 400;
    font-family: $font-serif;

    &:hover .hash {
      color: #ccc;
      display: block;

      @media screen and (max-width: 766px) {
        display: none;
      }
    }

    .hash {
      color: #ddd;
      transition: color 0.3s;
      position: absolute;
      left: -20px;
      width: auto;
      display: none;
    }

    a {
      display: inline-block;
      position: relative;
      width: 100%;
      color: inherit;
    }
  }

  h1 .hash { left: -25px; }
  h4 { font-size: 16px; }
  h5 { font-size: 14px; }

  counter-reset: h1counter h2counter h3counter h4counter h5counter;

  h1 {
    counter-reset: h2counter;
    .header-link:before {
      content: counter(h1counter) ". ";
      counter-increment: h1counter;
    }
    &.notoc .header-link:before {
      content: none;
      counter-increment: none;
    }
  }
  h1 ~ h2 .header-link:before { content: counter(h1counter) "." counter(h2counter) ". "; }
  h2 {
    counter-reset: h3counter;
    .header-link:before {
      counter-increment: h2counter;
      content: counter(h2counter) ". ";
    }
    &.notoc .header-link:before {
      content: none;
      counter-increment: none;
    }
  }
  h1 ~ h2 ~ h3 .header-link:before { content: counter(h1counter) "." counter(h2counter) "." counter(h3counter) ". "; }
  h2 ~ h3 .header-link:before { content: counter(h2counter) "." counter(h3counter) ". "; }
  h3 {
    counter-reset: h4counter;
    .header-link:before {
      content: counter(h3counter) ". ";
      counter-increment: h3counter;
    }
    &.notoc .header-link:before {
      content: none;
      counter-increment: none;
    }
  }
  h1 ~ h2 ~ h3 ~ h4 .header-link:before { content: counter(h1counter) "." counter(h2counter) "." counter(h3counter) "." counter(h4counter) ". "; }
  h2 ~ h3 ~ h4 .header-link:before { content: counter(h2counter) "." counter(h3counter) "." counter(h4counter) ". "; }
  h3 ~ h4 .header-link:before { content: counter(h3counter) "." counter(h4counter) ". "; }
  h4 {
    counter-reset: h5counter;
    .header-link:before {
      content: counter(h4counter) ". ";
      counter-increment: h4counter;
    }
    &.notoc .header-link:before {
      content: none;
      counter-increment: none;
    }
  }
  h1 ~ h2 ~ h3 ~ h4 ~ h5 .header-link:before { content: counter(h1counter) "." counter(h2counter) "." counter(h3counter) "." counter(h4counter) "." counter(h5counter) ". "; }
  h2 ~ h3 ~ h4 ~ h5 .header-link:before { content: counter(h2counter) "." counter(h3counter) "." counter(h4counter) "." counter(h5counter) ". "; }
  h3 ~ h4 ~ h5 .header-link:before { content: counter(h3counter) "." counter(h4counter) "." counter(h5counter) ". "; }
  h4 ~ h5 .header-link:before { content: counter(h4counter) "." counter(h5counter) ". "; }
  h5 {
    .header-link:before {
      content: counter(h5counter) ". ";
      counter-increment: h5counter;
    }
    &.notoc .header-link:before {
      content: none;
      counter-increment: none;
    }
  }
}

#footer {
  border-top: 5px solid #ddd;
}

.desk_search {
  display: none;
  float: right;
  input[type="text"] {
    width: 390px;
    padding: 2px;

    &:focus { outline: none; }
  }

  @media screen and (max-width: 766px) {
    float: none;
  }

  @media screen and (max-width: 600px) {
    display: none !important;
  }
}

#search_btn {
  cursor: pointer;
  @media screen and (max-width: 600px) {
    display: none !important;
  }
}

#main-nav > ul.searching > li > a {
  padding: 31px 0 0 0;
}

article .entry-content blockquote {
  font-family: $font-serif;
  font-weight: 400;
  font-size: 1.1em;
  line-height: 1.5;

  & > *, & > figure.code {
    margin: 0 35px;

    @media screen and (max-width: 600px) {
      margin-left: 25px;
      margin-right: 25px;
    }
  }

  code {
    background-color: inherit;
    padding: 0;
  }

  hr {
    padding: 0;
    text-align: center;
    width: 100%;
    margin: 20px auto;
    background-color: #eee;
    color: #eee;
  }

  @mixin quote-bar {
    cursor: default;
    display: inline-block;
    position: relative;
    font-size: 1.5em;
    padding: 0 0.25em;
    background: white;
    top: -0.5em;
    font-family: $font-icon;
  }

  hr:first-child {
    text-align: left;
    margin-bottom: 10px;

    &:after {
      @include quote-bar;
      content: "\f10d";
      padding-left: 0;
    }
  }

  hr:last-child {
    text-align: right;
    margin-top: 10px;

    &:after {
      @include quote-bar;
      content: "\f10e";
      padding-right: 0;
    }
  }
  .icon-quote-right { color: #eee; }

  footer {
    border-top: none;
    padding-top: 0;
    padding-bottom: 0;
    font-size: 16px;
    margin-top: 5px;
  }
}

kbd {
  background-color: #dddddd;
  background-image: linear-gradient(#f1f1f1, #ddd);
  background-repeat: repeat-x;
  border-radius: 2px;
  border: 1px solid #ddd;
  border-bottom-color: #ccc;
  border-right-color: #ccc;
  padding: 1px 4px;
  line-height: 10px;
  cursor: default;
}

